syntax = "proto3";
package coolstore;
option csharp_namespace = "VND.CoolStore.Services.Inventory.v1.Grpc";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service InventoryService {
  rpc GetInventories(google.protobuf.Empty) returns (GetInventoriesResponse) {
    option (google.api.http) = {
      get: "/inventory/api/availabilities"
    };
  }
  rpc GetInventory(GetInventoryRequest) returns (GetInventoryResponse) {
    option (google.api.http) = {
      get: "/inventory/api/availabilities/{id}"
    };
  }
  rpc DbMigration(google.protobuf.Empty) returns (DbMigrationResponse) {
    option (google.api.http) = {
      post: "/inventory/api/inventory/migrate"
      body: "*"
    };
  }
}

message InventoryDto {
  string id = 1;
  string location = 2;
  int32 quantity = 3;
  string link = 4;
}

message GetInventoriesResponse {
  repeated InventoryDto inventories = 1;
}

message GetInventoryRequest {
  string id = 1;
}

message GetInventoryResponse {
  InventoryDto result = 1;
}

message DbMigrationResponse {
  bool ok = 1;
}
